cleaned up the config

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -19,6 +19,7 @@
     "wlr/workspaces": {
 	    "on-click": "activate",
 	    "format": "{icon}",
+      "all_outputs": true,
 	    "sort-by-number": true,
             "persistent workspaces": {
 		     "1": [],
@@ -30,7 +31,17 @@
 		     "7": [],
 		     "8": [],
 		     "9": [],
-		     "10": []
+		     "10": [],
+         "11": [],
+         "12": [],
+         "13": [],
+         "14": [],
+         "15": [],
+         "16": [],
+         "17": [],
+         "18": [],
+         "19": [],
+         "20": []
 	    },
 	    "format-icons": {
 			"1": "一",
@@ -43,6 +54,16 @@
 			"8": "八",
 			"9": "九",
 			"10": "十",
+      "11": "一",
+      "12": "二",
+      "13": "三",
+      "14": "四",
+      "15": "五",
+      "16": "六",
+      "17": "七",
+      "18": "八",
+      "19": "九",
+      "20": "二十",
 			"default": "一"
 		}
     },
@@ -76,7 +97,7 @@
     "network": {
 		"format-wifi": "  {essid}",
 		"format-ethernet": "  {ipaddr}",
-		"format-disconnected": " Disconnected",
+		"format-disconnected": " Disconnected"
     },
     "pulseaudio": {
         "format": "{icon} {volume}",
