--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -3,29 +3,27 @@ title=foot
 font=CaskaydiaCove NF:dpi=96:size=12
 
 
+[cursor]
+color = 181818 56d8c9
 
 [colors]
-# Gruvbox
-# alpha=0.9
-background=282828
-foreground=ebdbb2
+background= 181818
+foreground= b9b9b9
 
-#regular
-regular0=262626
-regular1=cc241d
-regular2=98971a
-regular3=d79921
-regular4=458588
-regular5=b16286
-regular6=689d6a
-regular7=a89984
+regular0=   252525
+regular1=   ed4a46
+regular2=   70b433
+regular3=   dbb32d
+regular4=   368aeb
+regular5=   eb6eb7
+regular6=   3fc5b7
+regular7=   777777
 
-#bright
-bright0=928374
-bright1=fb4934
-bright2=b8bb26
-bright3=fabd2f
-bright4=83a598
-bright5=d3869b
-bright6=8ec07c
-bright7=ebdbb2
+bright0=    3b3b3b
+bright1=    ff5e56
+bright2=    83c746
+bright3=    efc541
+bright4=    4f9cfe
+bright5=    ff81ca
+bright6=    56d8c9
+bright7=    dedede
